--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,38 @@
 asgiref==3.5.2
+azure-core==1.24.1
+azure-storage-blob==12.12.0
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==37.0.2
 Django==4.0.5
 django-cors-headers==3.13.0
 django-environ==0.8.1
+django-reset-migrations==0.4.0
+django-storages==1.12.3
 django-unixtimestampfield==0.5.0
 djangorestframework==3.13.1
+ffmpeg-python==0.2.0
+future==0.18.2
+idna==3.3
+isodate==0.6.1
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+msrest==0.7.0
+oauthlib==3.2.0
+openapi-codec==1.3.2
 Pillow==9.1.1
+pycparser==2.21
 pytz==2022.1
+requests==2.27.1
+requests-oauthlib==1.3.1
+simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
+typing_extensions==4.2.0
+uritemplate==4.1.1
+urllib3==1.26.9
 whitenoise==6.2.0
