--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 azure-core==1.24.1
 azure-storage-blob==12.12.0
+CacheControl==0.12.11
+cachetools==5.2.0
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -9,26 +11,51 @@ coreschema==0.0.4
 cryptography==37.0.2
 Django==4.0.5
 django-cors-headers==3.13.0
+django-dbbackup==3.3.0
 django-environ==0.8.1
 django-reset-migrations==0.4.0
 django-storages==1.12.3
 django-unixtimestampfield==0.5.0
 djangorestframework==3.13.1
+fcm-django==1.0.12
 ffmpeg-python==0.2.0
+firebase-admin==5.2.0
 future==0.18.2
+google-api-core==2.8.1
+google-api-python-client==2.50.0
+google-auth==2.7.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.1
+google-cloud-firestore==2.5.2
+google-cloud-storage==2.4.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.2
+grpcio==1.46.3
+grpcio-status==1.46.3
+httplib2==0.20.4
 idna==3.3
 isodate==0.6.1
 itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+msgpack==1.0.4
 msrest==0.7.0
+numpy==1.22.4
 oauthlib==3.2.0
 openapi-codec==1.3.2
+opencv-python==4.6.0.66
 Pillow==9.1.1
+proto-plus==1.20.5
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
+pyparsing==3.0.9
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+rsa==4.8
 simplejson==3.17.6
 six==1.16.0
 sqlparse==0.4.2
